gcc/testsuite/rust/rustc/ui/malformed/issue-69341-malformed-derive-inert_dg.rs
fn main() {}

struct CLI {
    #[derive(parse())] // { dg-error "" "" { target *-*-* } }
    path: (),
}

